# SOLO

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  context.cpp  context.h  coupling.cpp  coupling.h  dss_pinlo.cpp  dss_pinlo.h  dss_pinlo_test.cpp  factorizationscale.cpp  gbwoneloopcalc.cpp  gluondist.cpp  gluondist.h  gluondist_driver.cpp  gsl_exception.h  hardfactor.h  hardfactors_momentum.cpp  hardfactors_momentum.h  hardfactors_position.cpp  hardfactors_position.h  hardfactors_radial.cpp  hardfactors_radial.h  ictx_var_list.inc  index.html  integrationcontext.cpp  integrationcontext.h  integrationtype.cpp  integrationtype.h  integrator.cpp  integrator.h  log.h  oneloopcalc.cpp  params.json  utils.cpp  utils.h
kov/: comm_constr.h  gauleg.cpp  input_funr.h  kovr.h
kov-position/: comm_constr.h  kovr.cpp
run/: hardfactors-test.txt  hfparsetest-quick.cfg
src/: .gitignore  CMakeLists.txt  context.cpp  context.h  coupling.cpp  coupling.h  dss_pinlo.cpp  dss_pinlo.h  exceptions.h  factorizationscale.cpp  factorizationscale.h  gluondist.cpp  gluondist.h  gluondist_driver.cpp  hardfactor.h  hardfactor_parsed.cpp  hardfactor_parsed.h  hardfactors_momentum.cpp  hardfactors_momentum.h  hardfactors_position.cpp  hardfactors_position.h  hardfactors_radial.cpp  hardfactors_radial.h  ictx_var_list.inc  integrationcontext.cpp  integrationcontext.h  integrationtype.cpp  integrationtype.h  integrator.cpp  integrator.h  log.h  oneloopcalc.cpp  typedefs.h  utils.cpp  utils.h
src/bksolution/: CMakeLists.txt  bk.cpp  discretize.c  discretize.h  solver.cpp  solver.h
src/configuration/: CMakeLists.txt  configuration.cpp  configuration.h  context.cpp  context.h  contextreader.cpp  ctx_var_list.inc
src/dss_pinlo/: CMakeLists.txt  dss_pinlo.cpp  dss_pinlo.h  dss_pinlo_test.cpp
src/gluondist/: CMakeLists.txt  gluondist.cpp  gluondist.h  gluondist_driver.cpp
src/hardfactors/: CMakeLists.txt  categorymap.h  exact.cfg  hardfactor.cpp  hardfactor.h  hardfactor_group_parser.cpp  hardfactor_group_parser.h  hardfactor_parsed.cpp  hardfactor_parsed.h  hardfactor_parser.cpp  hardfactor_parser.h  hardfactors.cfg  hardfactors_momentum.cpp  hardfactors_momentum.h  hardfactors_position.cpp  hardfactors_position.h  hardfactors_radial.cpp  hardfactors_radial.h  hfeval.cpp  hfparser.cpp  parsing.cpp  parsing.h
src/integration/: ictx_var_list.inc  integrationcontext.cpp  integrationcontext.h  integrationregion.cpp  integrationregion.h  integrationtype.cpp  integrationtype.h  integrator.cpp  integrator.h
src/kov-position/: comm_constr.h  gauleg.cpp  interr.cpp  kovr.cpp
src/oneloopcalc/: CMakeLists.txt  oneloopcalc.cpp  programconfiguration.cpp  programconfiguration.h  resultscalculator.cpp  resultscalculator.h  trace.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
stylesheets/: styles.css
test/: all-centered.cfg  minimal.cfg  minimal_hardfactors.cfg  standard.cfg
